--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,10 @@ uuid = "8c38250f-3b61-5792-a541-9a81440c273c"
 authors = ["Carlos Vigil-Vásquez <carlos.vigil.v@gmail.com>"]
 version = "0.1.0"
 
+[deps]
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+
 [compat]
 julia = "1.10"
