docs: update documentation backend and add tutorials (wip)
This commit significantly updates the documentation structure and adds
new tutorials. Key changes include:

- Restructured docs/make.jl to support Literate.jl for tutorials
- Added new tutorial files for getting started and molecular fingerprints
- Updated Project.toml with new documentation dependencies
- Added scripts for cleaning docs and running a live server
- Created a changelog.md file and updated its generation process
- Modified the overall documentation structure and navigationocs: implement Literate.jl and start writing tutorials

--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,11 +1,15 @@
-# Don't forget to run
-#
-#     pkg> dev ..
-#
 [deps]
+ArgMacros = "dbc42088-9de8-42a0-8ec8-2cd114e1ea3e"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 LiveServer = "16fef848-5104-11e9-1b77-fb7a48bbb589"
+MolecularGraph = "6c89ec66-9cd8-5372-9f91-fabc50dd27fd"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SubgraphGrammar = "8c38250f-3b61-5792-a541-9a81440c273c"
+TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 
 [compat]
 Documenter = "1"
